Resolves #7; alignment of h2 works on mobile
Also left-aligned content for mobile to make browsing easier

--- a/src/styles/media-queries/_posts.sass
+++ b/src/styles/media-queries/_posts.sass
@@ -9,7 +9,7 @@
             display: flex
             align-items: center
             justify-content: center
-            text-align: right
+            text-align: left
 
         .content > .top
             display: flex
@@ -19,7 +19,7 @@
 
             &>span
                 display: flex
-                justify-content: flex-end
+                justify-content: flex-start
 
                 button
                     margin: 0
@@ -38,12 +38,12 @@
             height: 80vh
             display: flex
             flex-direction: column
-            align-items: flex-start
+            justify-content: space-between
             max-width: 100%
             width: 90% !important
 
             p
-                text-align: right
+                text-align: left
                 margin: 0
                 padding: 0
 
